fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
   font-size: 32px;
   /* overflow: auto; */
   position: relative;
-  overflow-y: hidden;
-  height: 100vh;
+  /* overflow-y: hidden; */
+  height: 40vh;
 }
 body::before {
   content: "";
@@ -44,8 +44,8 @@ body::before {
   content: "";
   position: absolute;
   background: url(./images/pattern-quotes.svg) no-repeat center center;
-  top: 98px;
-  left: 70px;
+  top: 117px;
+  left: 65px;
   width: 30%;
   height: 30%;
 }
@@ -90,6 +90,8 @@ body::before {
 .image {
   width: 100%;
   border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .right-container {
   position: relative;
@@ -120,14 +122,14 @@ body::before {
 @media (max-width: 760px) {
   body {
     overflow-y: auto;
-    height: 50vh;
+    height: 30vh;
   }
   body::before {
     content: "";
     position: absolute;
     background: url(./images/pattern-curve.svg) no-repeat center center/cover;
-    top: 755px;
-    left: -40px;
+    top: 825px;
+    left: -20px;
     width: 50%;
     height: 50%;
   }
@@ -158,12 +160,13 @@ body::before {
     margin: 20px;
     margin-top: 40px;
     text-align: center;
+    position: relative;
   }
   .left-content::before {
     content: "";
     position: absolute;
     background: url(./images/pattern-quotes.svg) no-repeat center center;
-    top: -70px;
+    top: -56px;
     left: 120px;
     width: 30%;
     height: 30%;
@@ -182,7 +185,7 @@ body::before {
     display: flex;
     position: relative;
     justify-content: center;
-    top: 12px;
+    top: -1px;
     left: 172px;
     /* transform: translateX(170px); */
   }
